Implemented Kingpin Katsu Desktop Site

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function showMenu() {
         <a href="https://kingpin-katsu.square.site/s/order" class="katsu-link" target="_blank"><div class="action-button" style="margin-top: 8px;">ORDER CATERING</div></a>
       </div>
     </div>
-    <div id="menu-promo-mobile" style="#680000;">
+    <div id="menu-promo-mobile" style="#680000{}">
       <div style="padding: 24px 22px 22px 22px;">
         <div class="front-page-title" style="padding-bottom: 8px;">Fresh Katsu, served your way.</div>
         <div class="front-page-paragraph">At Kingpin Katsu, we take pride in serving up mouthwatering, crispy katsu made fresh to order.</div>
